--- a/form/css/form.css
+++ b/form/css/form.css
@@ -13,5 +13,27 @@
 }
 
 .my-input label {
+    width: 100%;
+    display: inline-block;
+    font-weight: bold;
+}
 
+.my-input label.required::after {
+    content: '*';
+    color: #f00;
+}
+
+.my-input input, .my-input select {
+    width: 100%;
+    height: 34px;
+    box-sizing: border-box;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 14px;
+}
+
+.float-left {
+  float: left;
 }
